[VIM Mode] Add g<up> g<down> commands

Summary:
Add twin commands for `gj` and `gk` for usage with standard
arrow keys.

BUG: 418486
FIXED-IN: 5.69

Test Plan:
1. Open document with large sentences, that span across multiple visual lines in Kate and use `gj` and `gk` commands in normal mode to move inside a line.
2. Use `g<down>` and `g<up>` commands - the result must be the same, as using `gj` and `gk` commands.
3. Repeat the same for `visual` mode.

Reviewers: #kate, #frameworks

Subscribers: cullmann, dhaumann, kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D27928